functions.styl no longer needed, removing inline images for now, they're just too big at the moment.

--- a/aristo/buttons.styl
+++ b/aristo/buttons.styl
@@ -1,7 +1,4 @@
 // Buttons
-@import "functions"
-@import "text"
-
 aristo-default-button()
   bold-aristo-font()
   -khtml-appearance: none
@@ -9,8 +6,8 @@ aristo-default-button()
   padding 0px 13px
   background none
   margin 5px
-  -webkit-border-image url(aristo-button-bezel-o.png) 2 2 2 2 stretch stretch
-  -moz-border-image url(aristo-button-bezel-o.png) 2 2 2 2 stretch stretch
+  -webkit-border-image url(images/aristo-button-bezel-o.png) 2 2 2 2 stretch stretch
+  -moz-border-image url(images/aristo-button-bezel-o.png) 2 2 2 2 stretch stretch
   color #4F4F4F
   -webkit-transition -webkit-box-shadow 0.2s linear
   text-shadow 0px 1px 1px #fff
@@ -20,22 +17,22 @@ aristo-default-button()
     -webkit-box-shadow: 0 0 5px #d4d4d4
     -moz-box-shadow: 0 0 5px #d4d4d4
   &:active:not(:disabled)
-    -webkit-border-image url(aristo-button-bezel-x.png) 2 2 2 2 stretch stretch
-    -moz-border-image url(aristo-button-bezel-x.png) 2 2 2 2 stretch stretch
+    -webkit-border-image url(images/aristo-button-bezel-x.png) 2 2 2 2 stretch stretch
+    -moz-border-image url(images/aristo-button-bezel-x.png) 2 2 2 2 stretch stretch
   &:disabled
     opacity 0.5
   
 aristo-blue-button()
   aristo-default-button()
-  -webkit-border-image url("aristo-button-bezel-blue-o.png") 2 2 2 2 stretch stretch
-  -moz-border-image url("aristo-button-bezel-blue-o.png") 2 2 2 2 stretch stretch
+  -webkit-border-image url(images/aristo-button-bezel-blue-o.png) 2 2 2 2 stretch stretch
+  -moz-border-image url(images/aristo-button-bezel-blue-o.png) 2 2 2 2 stretch stretch
   color #1c4257
   &:hover
     -webkit-box-shadow: 0 0 5px #A1CAE2
     -moz-box-shadow: 0 0 5px #A1CAE2
   &:active:not(:disabled)
-    -webkit-border-image url("aristo-button-bezel-blue-x.png") 2 2 2 2 stretch stretch
-    -moz-border-image url("aristo-button-bezel-blue-x.png") 2 2 2 2 stretch stretch
+    -webkit-border-image url(images/aristo-button-bezel-blue-x.png) 2 2 2 2 stretch stretch
+    -moz-border-image url(images/aristo-button-bezel-blue-x.png) 2 2 2 2 stretch stretch
   
 button.aristo-default
   aristo-default-button()
